[package]
name = "hexo"
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lexa-diky/hexo"
readme = "README.md"
documentation = "https://github.com/lexa-diky/hexo"
homepage = "https://github.com/lexa-diky/hexo"
description = "Tiny binary writer utility, just enough for you"
keywords = ["cli-utility", "binary", "hexo", "simple"]
categories = ["command-line-utilities"]
exclude = [
    "sample.hexo",
    "samples"
]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pest = "2.7.9"
pest_derive = "2.7.9"
notify = "6.1.1"
console = "0.15.8"
lazy_static = "1.5.0"
