[package]
name = "hexo-ast"
version = "0.7.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lexa-diky/hexo"
documentation = "https://github.com/lexa-diky/hexo"
homepage = "https://github.com/lexa-diky/hexo"
description = "Hexo's IO utility"

[dependencies]
pest = "2.7.9"
pest_derive = "2.7.9"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false