[package]
name = "hexo-cst"
version = "0.7.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lexa-diky/hexo"
documentation = "https://github.com/lexa-diky/hexo"
homepage = "https://github.com/lexa-diky/hexo"
description = "Hexo's IO utility"

[dependencies]
hexo-ast = { path = "../hexo-ast", version = "0.7.8" }
